--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       <header class="masthead">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
-          <small>{{ site.tagline }}</small>
+          <small><a href="about">{{ site.tagline }}</a></small>
         </h3>
       </header>
 
