--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,12 @@
     {% endfor %}
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
   </nav>
-
+  <div class ="sidebar-item">
+          <a href="https://github.com/RostakaGmfun" target="_blank"><img src="public/gh-mark.png"></a>GitHub
+  </div>
+  <div class ="sidebar-item">
+          <a href="https://twitter.com/RostakaGmfun" target="_blank"><img src="public/twitter512.png" width=36 height=36 ></a>Twitter
+  </div>
   <div class="sidebar-item">
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
