--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,7 +34,7 @@
   </div>
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      &copy; 2014-{{ site.time | date: '%Y' }}. All rights reserved.
     </p>
   </div>
 </div>
