--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-avatar">
-     <img src="/public/avatar.png">
+     <img src="/public/pixelavatar.png">
   </div>
   <div class="sidebar-item">
     <p>{{ site.desc }}</p>
