New article and some minor changes

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
      <img src="/public/pixelavatar.png">
   </div>
   <div class="sidebar-item">
-    <p>{{ site.desc }}</p>
+    <p>{{ site.motto }}</p>
   </div>
 
   <nav class="sidebar-nav">
