--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -48,27 +48,29 @@ body {
 }
 
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Bitstream Vera Sans Mono", Terminal,monospace;
   font-size: 16px;
   line-height: 1.5;
+  font-weight:600;
 }
 @media (min-width: 38em) {
   html {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 
 body {
-  color: #515151;
-  background-color: #fff;
+  color: #ccc;
+  background-color: #000;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #268bd2;
+  color: #FD90D0;
   text-decoration: none;
+  font-weight: bold;
 }
 a strong {
   color: inherit;
@@ -76,7 +78,7 @@ a strong {
 /* `:focus` is linked to `:hover` for basic accessibility */
 a:hover,
 a:focus {
-  text-decoration: underline;
+    background-color:#70C6FF
 }
 
 /* Headings */
@@ -84,16 +86,26 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
   font-weight: bold;
   line-height: 1.25;
-  color: #313131;
+  color: #FFFC7F;
   text-rendering: optimizeLegibility;
 }
-h1 {
-  font-size: 2rem;
+h1::before {
+  content: "==> ";
 }
+
+h1 {
+  font-size: 1.3rem;
+}
+
+h2::before {
+  content: "==> ";
+}
+
 h2 {
   margin-top: 1rem;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
+
 h3 {
   margin-top: 1.5rem;
   font-size: 1.25rem;
@@ -110,7 +122,7 @@ p {
 }
 
 strong {
-  color: #303030;
+  color: #07FAA0;
 }
 
 
@@ -150,15 +162,16 @@ abbr[title] {
 /* Code */
 code,
 pre {
-  font-family: Menlo, Monaco, "Courier New", monospace;
+  font-family: "Bitstream Vera Sans Mono", Terminal, monospace;
 }
 code {
   padding: .25em .5em;
-  font-size: 85%;
-  color: #bf616a;
-  background-color: #f9f9f9;
+  font-size: 100%;
+  color: #07FAA0;
+  background-color: #333;
   border-radius: 3px;
 }
+
 pre {
   display: block;
   margin-top: 0;
@@ -170,13 +183,17 @@ pre {
   white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #f9f9f9;
+  background-color: #000;
 }
 pre code {
-  padding: 0;
-  font-size: 100%;
+  padding: 1rem;
+  font-size: 1rem;
   color: inherit;
-  background-color: transparent;
+  background-color: inherit;
+}
+
+pre span {
+    font-size: 0.95rem;
 }
 
 /* Pygments via Jekyll */
@@ -214,7 +231,7 @@ pre code {
 blockquote {
   padding: .5rem 1rem;
   margin: .8rem 0;
-  color: #7a7a7a;
+  color: #ccc;
   border-left: .25rem solid #e5e5e5;
 }
 blockquote p:last-child {
@@ -248,7 +265,7 @@ th {
 }
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9;
+  background-color: #000;
 }
 
 
@@ -274,8 +291,8 @@ tbody tr:nth-child(odd) th {
 .message {
   margin-bottom: 1rem;
   padding: 1rem;
-  color: #717171;
-  background-color: #f9f9f9;
+  color: #eee;
+  background-color: #292929;
 }
 
 
@@ -286,7 +303,7 @@ tbody tr:nth-child(odd) th {
  */
 
 .container {
-  max-width: 38rem;
+  max-width: 45rem;
   padding-left:  1rem;
   padding-right: 1rem;
   margin-left:  auto;
@@ -308,15 +325,12 @@ tbody tr:nth-child(odd) th {
 .masthead-title {
   margin-top: 0;
   margin-bottom: 0;
-  color: #505050;
 }
-.masthead-title a {
-  color: #505050;
-}
+
 .masthead-title small {
   font-size: 75%;
-  font-weight: 400;
-  color: #c0c0c0;
+  font-weight: 600;
+  color: #FD90D0;
   letter-spacing: 0;
 }
 
@@ -337,7 +351,7 @@ tbody tr:nth-child(odd) th {
 .page-title,
 .post-title,
 .post-title a {
-  color: #303030;
+  color: #FC889F;
 }
 .page-title,
 .post-title {
@@ -370,7 +384,7 @@ tbody tr:nth-child(odd) th {
   color: #999;
 }
 .related-posts li a:hover {
-  color: #268bd2;
+  color: #444;
   text-decoration: none;
 }
 .related-posts li a:hover small {
@@ -389,7 +403,7 @@ tbody tr:nth-child(odd) th {
   overflow: hidden; /* clearfix */
   margin-left: -1rem;
   margin-right: -1rem;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family:"Bitstream Vera Sans Mono", Terminus, monospace;
   color: #ccc;
   text-align: center;
 }
@@ -428,3 +442,60 @@ a.pagination-item:hover {
     border-bottom-right-radius: 4px;
   }
 }
+
+
+.sidebar {
+  top: 0;
+  float: left;
+  bottom: 0;
+  font-family:"Bitstream Vera Sans Mono", Terminus, monospace;
+  color: rgba(255,255,255,.6);
+  background-color: #000;
+  width: 20rem;
+}
+
+
+/* Sidebar content */
+
+.sidebar-avatar {
+    padding: 1rem 1rem 0rem 1.5rem;
+    display: inline;
+    width: 15rem;
+    margin-bottom: -1rem; 
+}
+
+.sidebar-item {
+  padding: 1rem;
+  display:inline-block;
+}
+.sidebar-item p:last-child {
+  margin-bottom: 0;
+}
+
+.sidebar-avatar {
+    padding: 1rem 1rem 0rem 1.5rem;
+    display: inline-block;
+    margin-bottom: -1rem; 
+}
+
+.sidebar li {
+    list-style: none;
+}
+
+.sidebar a:before {
+    content: "==> ";
+}
+
+.sidebar-link {
+  display:inline;
+}
+@media (min-width: 10rem) {
+  .sidebar-item {
+    padding: 1.5rem;
+  }
+  .sidebar-nav-item {
+    padding-left:  1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
