--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -1,15 +1,15 @@
-.highlight .hll { background-color: #ffc; }
-.highlight .c { color: #999; } /* Comment */
-.highlight .err { color: #a00; background-color: #faa } /* Error */
-.highlight .k { color: #069; } /* Keyword */
+.highlight .hll { background-color: #191919 }
+.highlight .c { color: #666; } /* Comment */
+.highlight .err { color: #990000; background-color: #191919 } /* Error */
+.highlight .k { color: #ffcd8b; } /* Keyword */
 .highlight .o { color: #555 } /* Operator */
-.highlight .cm { color: #09f; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #099 } /* Comment.Preproc */
-.highlight .c1 { color: #999; } /* Comment.Single */
-.highlight .cs { color: #999; } /* Comment.Special */
+.highlight .cm { color: #666; font-style: italic } /* Comment.Multiline */
+.highlight .cp { color: #9a383a; } /* Comment.Preproc */
+.highlight .c1 { color: #666; } /* Comment.Single */
+.highlight .cs { color: #666; } /* Comment.Special */
 .highlight .gd { background-color: #fcc; border: 1px solid #c00 } /* Generic.Deleted */
 .highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #f00 } /* Generic.Error */
+.highlight .gr { color: #990000 } /* Generic.Error */
 .highlight .gh { color: #030; } /* Generic.Heading */
 .highlight .gi { background-color: #cfc; border: 1px solid #0c0 } /* Generic.Inserted */
 .highlight .go { color: #aaa } /* Generic.Output */
@@ -17,16 +17,16 @@
 .highlight .gs { } /* Generic.Strong */
 .highlight .gu { color: #030; } /* Generic.Subheading */
 .highlight .gt { color: #9c6 } /* Generic.Traceback */
-.highlight .kc { color: #069; } /* Keyword.Constant */
-.highlight .kd { color: #069; } /* Keyword.Declaration */
-.highlight .kn { color: #069; } /* Keyword.Namespace */
-.highlight .kp { color: #069 } /* Keyword.Pseudo */
-.highlight .kr { color: #069; } /* Keyword.Reserved */
-.highlight .kt { color: #078; } /* Keyword.Type */
-.highlight .m { color: #f60 } /* Literal.Number */
-.highlight .s { color: #d44950 } /* Literal.String */
-.highlight .na { color: #4f9fcf } /* Name.Attribute */
-.highlight .nb { color: #366 } /* Name.Builtin */
+.highlight .kc { color: #b8bb00; } /* Keyword.Constant */
+.highlight .kd { color: #4cbbd1; } /* Keyword.Declaration */
+.highlight .kn { color: #4cbbd1; } /* Keyword.Namespace */
+.highlight .kp { color: #4cbbd1; } /* Keyword.Pseudo */
+.highlight .kr { color: #c476f1; } /* Keyword.Reserved */
+.highlight .kt { color: #c476f1; } /* Keyword.Type */
+.highlight .m { color: #ddaa66; } /* Literal.Number */
+.highlight .s { color: #5dff9e } /* Literal.String */
+.highlight .na { color: #4cbbd1 } /* Name.Attribute */
+.highlight .nb { color: # } /* Name.Builtin */
 .highlight .nc { color: #0a8; } /* Name.Class */
 .highlight .no { color: #360 } /* Name.Constant */
 .highlight .nd { color: #99f } /* Name.Decorator */
