--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -247,7 +247,10 @@ blockquote p:last-child {
 img {
   display: block;
   max-width: 100%;
-  margin: 0 0 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
   border-radius: 5px;
 }
 
