Minor imporvements to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,15 +27,9 @@
         {% endif %}
       {% endif %}
     {% endfor %}
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    <a href="https://github.com/RostakaGmfun" class="sidebar-nav-item" target="_blank">GitHub</a>
+    <a href="https://twitter.com/RostakaGmfun" class="sidebar-nav-item" target="_blank">Twitter</a>
   </nav>
-  <div class ="sidebar-item">
-          <a href="https://github.com/RostakaGmfun" target="_blank"><img src="/public/gh-mark.png"></a>GitHub
-  </div>
-  <div class ="sidebar-item">
-          <a href="https://twitter.com/RostakaGmfun" target="_blank"><img src="/public/twitter512.png" width=36 height=36 ></a>Twitter
-  </div>
-  <div class="sidebar-item">
     <p>
       &copy; 2014-{{ site.time | date: '%Y' }}. All rights reserved.
     </p>
