--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="{{ site.description }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ site.title }}</title>
-  <link rel="stylesheet" href="css/main.css">
-{% include head.html %}
+   <meta charset="utf-8">
+   <title>{{ page.title }} - {{ site.title }}</title>
+   <link rel="stylesheet" type="text/css" href="{{ site.path }}/css/style.css" >
+   <link rel="alternate" type="application/atom+xml" href="{{ site.path }}/feed.xml" title="News Feed">
 </head>
 <body>
-  <div class="container">
-    <h1><a href="./">{{ site.tag_text }}</a></h1>
-    {{ content }}
-  </div>
-{% include scripts.html %}
+
+<div class="container">
+<header class="masthead">
+   <h3 class="masthead-title">
+     <a href="{{ site.url }}">{{ site.title }}</a>
+     <small>
+       &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/feed.xml">Feed</a>
+     </small>
+   </h3>
+</header>
+
+<div id="content">
+  {{ content }}
+</div>
+
+</div><!-- .container -->
 </body>
 </html>
